# Mocktra

./: go.mod  main.go  main.py  models.py  pyproject.toml  readme.md
generator/: default_values.go  generator_day.py  generator_items.py  models.go  models.py  simulation.go
interface/: terminal_ui.py
user_interface/: terminalUi.go
