[tool.poetry]
name = "mocktra"
version = "0.1.0"
description = "A mocker for transactional sales of items at different locations"
authors = ["Felix Scheffler <felix.scheffler@studium.uni-hamburg.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
pyTermTk = "^0.10.22-alpha.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
